<?xml version="1.0"?>
<package>
  <name>bullet_panda</name>
  <version>0.0.1</version>
  <description>
    bullet_panda package: simulating the franka panda emika robot in bullet.
  </description>

  <maintainer email="sxs1412@bham.ac.uk">
    Saif Sidhik
  </maintainer>
  <license>Apache 2.0</license>
  <author>Saif Sidhik</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>franka_panda_description</build_depend>
  <run_depend>franka_panda_description</run_depend>

</package>
