<?xml version="1.0"?>
<package>
  <name>bullet_panda</name>
  <version>0.0.1</version>
  <description>
    bullet_panda package: simulating the franka panda emika robot in bullet.
  </description>

  <maintainer email="sxs1412@bham.ac.uk">
    Saif Sidhik
  </maintainer>
  <license>todo</license>
  <author>Saif Sidhik</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
